@@ -1,6 +1,7 @@
 Version 0.3.1
 -------------
 * Improved doctest syntax error message
+* PythonPathContext no longer breaks if small changes to the path occur in its context.
 
 Version 0.3.0
 -------------
